<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>Project_ES2</groupId>
  <artifactId>Project</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Project</name>
  <url>http://maven.apache.org</url>

   <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
    	<junit.jupiter.version>5.5.2</junit.jupiter.version>
        <junit.platform.version>1.5.2</junit.platform.version>
    </properties>
 
    <dependencies>
        <dependency>
       		 <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
         	<groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>org.jacoco.report</artifactId> <!-- we're done with ReportMojo now, so we don't need to depend on the maven plugin anymore -->
            <version>0.7.9</version>
		</dependency>
		
        
    </dependencies>
 
    <build>
        <plugins>
        
        
          
    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
        <forkCount>3</forkCount>
        <reuseForks>true</reuseForks>
        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
        <skipTests>false</skipTests>
        <forkMode>once</forkMode>
        <testFailureIgnore>true</testFailureIgnore>
    </configuration>
    </plugin>
    <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.1</version>
            <configuration>
                <fork>true</fork>
                <executable>C:\Program Files\Java\jdk-13.0.2\bin\javac.exe</executable>
                </configuration>
        </plugin>	
 
    <plugin>  
   				 <groupId>org.jacoco</groupId>  
    			 <artifactId>jacoco-maven-plugin</artifactId>  
    			 <version>0.7.9</version>  
    			 <executions>  
       			 <execution>  
           		 	<goals>  
                		<goal>prepare-agent</goal>  
            		</goals>  
        		 </execution>  
       			 <execution>  
           	 		<id>report</id>  
            		<phase>prepare-package</phase>  
            		<goals>  
                <goal>report</goal>  
            </goals>  
        </execution>  
    </executions>  
</plugin>       
            
        </plugins>
    
    <finalName>
    	helloworldubuntu
    </finalName>    
    </build>
    
    
</project>
